Design `DeltaQ.Class`

--- a/lib/dqsd-classes/dqsd-classes.cabal
+++ b/lib/dqsd-classes/dqsd-classes.cabal
@@ -36,6 +36,7 @@ library
     , Chart
 
   exposed-modules:
+    DeltaQ.Class
     DeltaQ.Model.DeltaQ
     DeltaQ.Model.Introspection
     DeltaQ.Model.Utilities
