Add parent module `DeltaQ`

--- a/lib/dqsd-piecewise-poly/dqsd-piecewise-poly.cabal
+++ b/lib/dqsd-piecewise-poly/dqsd-piecewise-poly.cabal
@@ -45,6 +45,7 @@ library
     , dqsd-classes
 
   exposed-modules:
+    DeltaQ
     DeltaQ.PiecewisePolynomial
     DeltaQ.PWPs
     Numeric.Polynomial.Simple
