--- a/lib/dqsd-piecewise-poly/dqsd-piecewise-poly.cabal
+++ b/lib/dqsd-piecewise-poly/dqsd-piecewise-poly.cabal
@@ -43,7 +43,7 @@ library
   build-depends:
     , base
     , deepseq
-    , dqsd-classes
+    , deltaq
     , exact-combinatorics > 0.2
 
   exposed-modules:
@@ -77,7 +77,7 @@ test-suite test
     
   build-depends:
     , base
-    , dqsd-classes
+    , deltaq
     , dqsd-piecewise-poly
     , hspec ^>= 2.11.0
     , QuickCheck
