Extend Haddock documentation for `deltaq`

--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -7,8 +7,19 @@ name:            deltaq
 --                 | | | +--- code changes with no API change
 version:         0.3.0.1
 synopsis:        ∆Q Systems Development
+description:
+  ∆Q System Development is a paradigm for developing distributed systems
+  that meet performance requirements.
+  In this paradigm,
+  the system designer starts by defining high-level outcomes,
+  explores different refinements into combinations of lower-level outcomes,
+  and evaluates their performance characteristics.
 
--- description:
+  This package provides data types and functions for
+
+  * outcomes and their combinations
+  * evaluating the performance characteristics of outcomes,
+    specifically the probability distribution of their completion times
 
 license:         BSD-3-Clause
 license-file:    LICENSE
