Add property tests for `Numeric.Polynomial.Simple`

--- a/lib/probability-polynomial/probability-polynomial.cabal
+++ b/lib/probability-polynomial/probability-polynomial.cabal
@@ -77,6 +77,9 @@ test-suite test
   
   main-is:
     Spec.hs
+  
+  other-modules:
+    Numeric.Polynomial.SimpleSpec
 
 benchmark probability-polynomial-benchmark
   import:           warnings
