--- a/lib/probability-polynomial/probability-polynomial.cabal
+++ b/lib/probability-polynomial/probability-polynomial.cabal
@@ -48,6 +48,7 @@ library
 
   exposed-modules:
     Data.Function.Class
+    Numeric.Function.Piecewise
     Numeric.Polynomial.Simple
     PWPs.IRVs
 
@@ -81,6 +82,7 @@ test-suite test
     Spec.hs
   
   other-modules:
+    Numeric.Function.PiecewiseSpec
     Numeric.Polynomial.SimpleSpec
 
 benchmark probability-polynomial-benchmark
