--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -50,7 +50,7 @@ library
   exposed-modules:
     DeltaQ
     DeltaQ.Class
-    DeltaQ.PiecewisePolynomialNew
+    DeltaQ.PiecewisePolynomial
     DeltaQ.PiecewisePolynomialOld
 
   other-modules:
@@ -77,5 +77,5 @@ test-suite test
     Spec.hs
 
   other-modules:
-    DeltaQ.PiecewisePolynomialNewSpec
+    DeltaQ.PiecewisePolynomialSpec
     DeltaQ.PiecewisePolynomialOldSpec
