--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ on:
   push:
     branches:
       - main
-  schedule:
+#  schedule:
     # Run once per day (at UTC 18:00) to maintain cache:
-    - cron: 0 18 * * *
+#    - cron: 0 18 * * *
 jobs:
   build:
     name: ${{ matrix.os }}-ghc-${{ matrix.ghc }}
@@ -30,11 +30,11 @@ jobs:
         cabal:
           - '3.10'
         ghc:
-          - '8.10'
+#          - '8.10'
 #          - '9.0'
 #          - '9.2'
 #          - '9.4'
-          - '9.6'
+#          - '9.6'
 #          - '9.8'
           - '9.10'
         exclude:
