--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -44,6 +44,7 @@ library
   default-language: Haskell2010
   build-depends:
     , base
+    , deepseq > 1.4
     , Chart
     , probability-polynomial
 
