Add `complexity` to benchmark production and consumption

--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -92,6 +92,8 @@ benchmark basic
     , criterion > 1.6
     , deepseq > 1.4
     , hvega
+    , optparse-applicative
+    , statistics
     , vector
 
   main-is:
