--- a/lib/probability-polynomial/probability-polynomial.cabal
+++ b/lib/probability-polynomial/probability-polynomial.cabal
@@ -43,6 +43,7 @@ library
     Numeric.Measure.Finite.Mixed
     Numeric.Polynomial.Simple
     Numeric.Probability.Mixed
+    Numeric.Probability.Moments
 
 test-suite test
   import:           warnings
