Add initial module `DeltaQ.Plot`

--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -52,6 +52,7 @@ library
     DeltaQ
     DeltaQ.Class
     DeltaQ.PiecewisePolynomial
+    DeltaQ.Plot
 
   other-modules:
     DeltaQ.Model.DeltaQ
