--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -43,10 +43,10 @@ library
   hs-source-dirs:   src
   default-language: Haskell2010
   build-depends:
-    , base
-    , deepseq > 1.4
-    , Chart
-    , probability-polynomial
+    , base >= 4.14.3.0 && < 4.21
+    , deepseq >= 1.4.4.0 && < 1.6
+    , Chart >= 1.8 && < 2.0
+    , probability-polynomial >= 1.0 && < 1.1
 
   exposed-modules:
     DeltaQ
@@ -66,14 +66,14 @@ test-suite test
   default-language: Haskell2010
 
   build-tool-depends: hspec-discover:hspec-discover
-    
+
   build-depends:
     , base
     , deltaq
-    , hspec ^>= 2.11.0
     , probability-polynomial
-    , QuickCheck
-  
+    , hspec >= 2.11.0 && < 2.12
+    , QuickCheck >= 2.14 && < 2.16
+
   main-is:
     Spec.hs
 
@@ -89,15 +89,15 @@ benchmark basic
 
   build-depends:
     , base
-    , bytestring
+    , bytestring >= 0.11 && < 0.13
     , deltaq
-    , cassava
-    , criterion > 1.6
-    , deepseq > 1.4
-    , hvega
-    , optparse-applicative
-    , statistics
-    , vector
+    , cassava >= 0.5.3.2 && < 0.6
+    , criterion >= 1.6 && < 1.7
+    , deepseq
+    , hvega >= 0.12 && < 0.13
+    , optparse-applicative >= 0.18.1.0 && < 0.19
+    , statistics >= 0.16 && < 0.17
+    , vector >= 0.12 && < 0.14
 
   main-is:
     Main.hs
