--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -28,12 +28,10 @@ maintainer:      neil.davies@pnsol.ccom
 
 -- copyright:
 build-type:      Simple
-extra-doc-files:
+
+extra-source-files:
   CHANGELOG.md
   README.md
-
--- Extra source files to be distributed with the package, such as examples, or a tutorial module.
--- extra-source-files:
 
 common warnings
   ghc-options: -Wall
