--- a/lib/probability-polynomial/probability-polynomial.cabal
+++ b/lib/probability-polynomial/probability-polynomial.cabal
@@ -67,6 +67,7 @@ test-suite test
     Numeric.Measure.DiscreteSpec
     Numeric.Measure.Finite.MixedSpec
     Numeric.Polynomial.SimpleSpec
+    Numeric.Probability.MixedSpec
 
 benchmark probability-polynomial-benchmark
   import:           warnings
