--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -51,6 +51,7 @@ library
   exposed-modules:
     DeltaQ
     DeltaQ.Class
+    DeltaQ.Methods
     DeltaQ.PiecewisePolynomial
     DeltaQ.Plot
 
@@ -74,6 +75,7 @@ test-suite test
 
   other-modules:
     DeltaQ.ClassSpec
+    DeltaQ.MethodsSpec
     DeltaQ.PiecewisePolynomialSpec
 
 benchmark basic
