--- a/lib/probability-polynomial/probability-polynomial.cabal
+++ b/lib/probability-polynomial/probability-polynomial.cabal
@@ -12,7 +12,8 @@ synopsis:        Probability distributions via piecewise polynomials
 
 license:         BSD-3-Clause
 license-file:    LICENSE
-author:          peterwthompson
+copyright:       Predictable Network Solutions Ltd., 2020-2024
+author:          Peter W. Thompson, Heinrich Apfelmus
 maintainer:      peter.thompson@pnsol.com
 
 -- copyright:
