--- a/lib/probability-polynomial/probability-polynomial.cabal
+++ b/lib/probability-polynomial/probability-polynomial.cabal
@@ -7,24 +7,37 @@ name:            probability-polynomial
 --                 | | | +--- code changes with no API change
 version:         1.0.0.0
 synopsis:        Probability distributions via piecewise polynomials
+description:
+  Package for manipulating finite probability distributions.
 
--- description:
+  Both discrete, continuous and mixed probability distributions are supported.
+  Continuous probability distributions are represented
+  in terms of piecewise polynomials.
 
+  Also includes an implementation of polynomials in one variable.
+
+category:        Probability, Math, Numeric, DeltaQ
+homepage:        https://github.com/DeltaQ-SD/deltaq
 license:         BSD-3-Clause
 license-file:    LICENSE
 copyright:       Predictable Network Solutions Ltd., 2020-2024
 author:          Peter W. Thompson, Heinrich Apfelmus
 maintainer:      peter.thompson@pnsol.com
 
--- copyright:
-build-type:      Simple
-
-extra-source-files:
+extra-doc-files:
   CHANGELOG.md
   README.md
 
+tested-with:
+  , GHC == 9.10.1
+
 common warnings
   ghc-options: -Wall
+
+source-repository head
+  type:     git
+  location: git://github.com/DeltaQ-SD/deltaq.git
+  subdir:   lib/probability-polynomial
 
 library
   import:           warnings
@@ -32,10 +45,10 @@ library
   default-language: Haskell2010
 
   build-depends:
-    , base >= 4.14.3.0 && < 4.21
+    , base >= 4.14.3.0 && < 5
     , containers >= 0.6 && < 0.8
     , deepseq >= 1.4.4.0 && < 1.6
-    , exact-combinatorics > 0.2 && < 0.3
+    , exact-combinatorics >= 0.2 && < 0.3
 
   exposed-modules:
     Data.Function.Class
