--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-# Github action by
+# Github action inspired by
 # https://github.com/jonathanknowles/haskell-example
 #
 name: Build
@@ -12,9 +12,9 @@ on:
   push:
     branches:
       - main
-#  schedule:
+  schedule:
     # Run once per day (at UTC 18:00) to maintain cache:
-#    - cron: 0 18 * * *
+    - cron: 0 18 * * *
 jobs:
   build:
     name: ${{ matrix.os }}-ghc-${{ matrix.ghc }}
@@ -23,25 +23,12 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-#          - macOS-latest
-#          - windows-latest
         cabal:
           - '3.12'
         ghc:
-#          - '8.10'
-#          - '9.0'
-#          - '9.2'
-#          - '9.4'
-#          - '9.6'
-#          - '9.8'
+          - '8.10'
+          - '9.6'
           - '9.10'
-        exclude:
-          # TODO: https://github.com/haskell-actions/setup/issues/77
-          # To work around the above issue, we exclude the following versions:
-          - os: macOS-latest
-            ghc: '8.10'
-          - os: macOS-latest
-            ghc: '9.0'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
