Add module `DeltaQ.Term`

--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -65,6 +65,7 @@ library
     DeltaQ.Methods
     DeltaQ.PiecewisePolynomial
     DeltaQ.Plot
+    DeltaQ.Term
 
 test-suite test
   import:           warnings
