--- a/cabal.project
+++ b/cabal.project
@@ -1,4 +1,4 @@
-index-state: 2025-03-01T13:51:25Z
+index-state: 2025-07-02T07:56:17Z
 
 packages:
     lib/deltaq/
@@ -11,8 +11,10 @@ tests:
 -- Use `contraints` and `allow-newer` to test against
 -- a new release of a dependency.
 --
+
 -- constraints:
---    containers == 0.8
+--  , optparse-applicative == 0.19.0.0
+--  , QuickCheck == 2.16.0.0
 --
 -- allow-newer:
 --    *:containers
