Add outcome expressions with "associative normal form"

--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -64,6 +64,7 @@ library
     DeltaQ
     DeltaQ.Class
     DeltaQ.Diagram
+    DeltaQ.Expr
     DeltaQ.Methods
     DeltaQ.PiecewisePolynomial
     DeltaQ.Plot
