Add tests for `DeltaQ.Expr`

--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -85,6 +85,8 @@ test-suite test
   main-is:            Spec.hs
   other-modules:
     DeltaQ.ClassSpec
+    DeltaQ.ExprSpec
+    DeltaQ.Gen.Term
     DeltaQ.MethodsSpec
     DeltaQ.PiecewisePolynomialSpec
 
