--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -85,6 +85,7 @@ test-suite test
   main-is:            Spec.hs
   other-modules:
     DeltaQ.ClassSpec
+    DeltaQ.DiagramSpec
     DeltaQ.ExprSpec
     DeltaQ.Gen.Term
     DeltaQ.MethodsSpec
