Control exports of `DeltaQ.Diagram` by adding an internal module

--- a/lib/deltaq/deltaq.cabal
+++ b/lib/deltaq/deltaq.cabal
@@ -64,6 +64,7 @@ library
     DeltaQ
     DeltaQ.Class
     DeltaQ.Diagram
+    DeltaQ.Diagram.Internal
     DeltaQ.Expr
     DeltaQ.Methods
     DeltaQ.PiecewisePolynomial
